[gd_scene load_steps=8 format=2]

[ext_resource path="res://Monsters/Monster.tscn" type="PackedScene" id=1]
[ext_resource path="res://Monsters/Utilities/EnemyHitBoxTracker.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/SensingZone.gd" type="Script" id=3]
[ext_resource path="res://scripts/Blocker.gd" type="Script" id=4]
[ext_resource path="res://images/station_A.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 100.125

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.49429
height = 32.5198

[node name="Blocker" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 6 )

[node name="ShootingZone" parent="." index="4"]
visible = false
scale = Vector2( 1.5, 1.5 )

[node name="SensingZone" type="Area2D" parent="ShootingZone" index="0"]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootingZone/SensingZone" index="0"]
shape = SubResource( 1 )

[node name="SensingZone" parent="." index="5"]
visible = false

[node name="RayCastDown" type="RayCast2D" parent="StabilizedAnchor" index="1"]
modulate = Color( 1, 0, 0, 1 )
cast_to = Vector2( 0, 100 )

[node name="RayCastUp" type="RayCast2D" parent="StabilizedAnchor" index="2"]
modulate = Color( 0, 0.227451, 1, 1 )
cast_to = Vector2( 0, -100 )

[node name="ObstacleAvoider" parent="." index="8"]
visible = false

[node name="DefendingZone" parent="." index="9" instance=ExtResource( 2 )]
visible = false

[node name="SpawnPointMarker" type="Node2D" parent="." index="10"]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RigidShipBody" index="1"]
rotation = 0.785398
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="RigidShipBody" index="2"]
rotation = -0.785398
shape = SubResource( 2 )

[connection signal="area_entered" from="ShootingZone/SensingZone" to="ShootingZone/SensingZone" method="_on_SensingZone_area_entered"]
[connection signal="area_exited" from="ShootingZone/SensingZone" to="ShootingZone/SensingZone" method="_on_SensingZone_area_exited"]
